# ENIB_Robot_Mobile_Ros2

./: README.md  STM32_ROS.sh  microRosInstall.sh  rosInstall.sh
3D_models/: CapteurVL53.CATPart  CapteurVL53.stl  LCD.CATPart  LCD.stl  MainBoard.CATProduct  Robot.CATProduct  RobotROSPlaque.CATPart  Robot_ROS_VL53_LCD.ufp
3D_models/HacheurDroite/: DRV8871_R-PDSO-G8.CATPart  RESC-0805.CATPart
3D_models/LCD/: Connecteur BSG.CATPart  LCD.CATProduct
3D_models/LogitechC270/: Logitech c270.CATPart  Logitech c270c.CATPart
3D_models/Shield/: Bouton_RST.CATPart  Connecteur Grove (droit).CATPart  LED.CATPart  PCB_uno_shield.CATPart  Shield.CATProduct  Switch.CATPart  broche wrapping 10F.CATPart  broche wrapping 2x3F.CATPart  broche wrapping 6F.CATPart  broche wrapping 8F.CATPart  spacer 1pt.CATPart  uno_shield-pcb.CATPart
3D_models/mainPCB/: 05P.CATPart  LED5MM.CATPart  _NPart#900947.CATPart  mainPcb.CATProduct
3D_models/other/: CapteurVL53.stl  CapteurVL53_2.CATPart  PlaqueBas.CATPart  RobotROSPlaque.CATPart  VL53L0X.CATPart  WebCamHolder.stl  ecrouLCD.CATPart  ecrouM3.CATPart  support_webcam.CATPart  visLCD.CATPart
Camera/: readme.md
IHM/: README.md  robot_mobile_ihm.workspace
docs/: README.md  make.bat  robotROS  robotROS_doxygen_conf
docs/latex/: make.bat  (+68 more)
finalCode/IHM/src/robot_mobile_pkg_cpp/: CMakeLists.txt
finalCode/IHM/src/robot_mobile_pkg_cpp/include/: mainwindow.hpp
finalCode/IHM/src/robot_mobile_pkg_cpp/src/: mainwindow.cpp  my_node.cpp
report/: Analyse EthicoTechnique.docx  Documentation Robot Mobile ROS2.docx  Liste matériel.docx  README.md
(+559 files in other folders)
